MMCPA-0: Fixing owldots spacing on mobile.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/header/_header-primary.scss
@@ -1023,17 +1023,7 @@ header {
   }
 }
 
-// .c-pre-content__region {
-//   @include breakpoint($desktop) {
-//     .region__pre-content {
-//       @include container(1284px);
-
-//       margin: 0 auto;
-//     }
-//   }
-// }
-
 .c-pre-content__region {
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid $white;
+  border-bottom: 1px solid $white;
 }
