--- a/docroot/themes/custom/alshaya_white_label/sass/components/menus/delivery-menu/_delivery-menu.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/menus/delivery-menu/_delivery-menu.scss
@@ -4,7 +4,7 @@
   padding: 0;
 
   @include breakpoint($only-mobile) {
-    margin: 1em auto;
+    margin: 0 auto 1em;
   }
 }
 
